# rp-pico

./: Cargo.toml  flake.nix
blinky/: Cargo.toml
blinky/src/: main.rs
leds/: Cargo.toml
leds/src/: main.rs
sounds/: Cargo.toml
sounds/src/: main.rs
