[package]
edition = "2021"
name = "blinky"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embedded-hal = { workspace = true, features = ["unproven"] }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true, features = ["print-defmt"] }
rp-pico = { workspace = true }

ws2812-pio = "0.7.0"
smart-leds = "0.3.0"
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }
