[package]
edition = "2021"
name = "sounds"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
embedded-hal = { workspace = true, features = ["unproven"] }
defmt = { workspace = true }
defmt-rtt = { workspace = true }
panic-probe = { workspace = true, features = ["print-defmt"] }
rp-pico = { workspace = true }

